style.css
body {
	background-image: url(dark_geometric_2X.png);
	background-repeat: repeat-both;
	color: gray;
}
input {
	background-color: darkgray;
}
a, a:active {
	color: lightgray;
}
a:hover {
	background-color: gray;
}
.content {
	width: 600px;
	margin: 0px auto;
}
.left, .right {
	display: block;
	float: left;
}
.as {
	display: block;
	float: left;
	margin: 50px 20px 0px 20px;
}
.is-to {
	display: block;
	margin-left: 20px;
}
.common {
	float: left;
	margin-left: 20px;
}
.calculator ul {
	list-style-type: none;
}
.credits {
	clear: both;
}

